--- a/css/style.css
+++ b/css/style.css
@@ -296,13 +296,11 @@ p{
     padding-bottom: 10px;
     padding-top: 10px;
 }
-.sub{
-    padding-top: 10px;
-}
-.sub input{
+
+/* .sub input{
     width: 100px;
     height: 25px;
-}
+} */
 
 
 
